--- a/school-management/school-management.csproj
+++ b/school-management/school-management.csproj
@@ -128,6 +128,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AssignmentsController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
+    <Compile Include="Controllers\GradesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InscriptionsController.cs" />
     <Compile Include="Controllers\StudentsController.cs" />
@@ -218,6 +219,12 @@
     <Content Include="Views\Inscriptions\IndexByStudent.cshtml" />
     <Content Include="Views\Inscriptions\CreateByStudent.cshtml" />
     <Content Include="Views\Inscriptions\EditByStudent.cshtml" />
+    <Content Include="Views\Grades\Create.cshtml" />
+    <Content Include="Views\Grades\Delete.cshtml" />
+    <Content Include="Views\Grades\Details.cshtml" />
+    <Content Include="Views\Grades\Edit.cshtml" />
+    <Content Include="Views\Grades\Index.cshtml" />
+    <Content Include="Views\Inscriptions\IndexByCourseAndTeacher.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
